--- a/index.html
+++ b/index.html
@@ -3,65 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Text Formatter</title>
+    <title>Text Formatter - Home</title>
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            transition: background-color 0.3s ease, color 0.3s ease;
+            background-color: #f4f4f9;
+            color: #333;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
-        .dark-mode {
-            background-color: #121212;
-            color: #ffffff;
+        .container {
+            margin-top: 100px;
         }
-        .form-label, .output-title {
-            font-weight: bold;
+        .btn {
+            padding: 15px 30px;
+            font-size: 1.2rem;
+            border-radius: 50px;
+            transition: all 0.3s ease;
         }
-        #outputText {
-            background-color: #f8f9fa;
-            border-radius: 5px;
-            padding: 10px;
-            min-height: 100px;
+        .btn-primary {
+            background-color: #007bff;
+            border-color: #007bff;
         }
-        .dark-mode #outputText {
-            background-color: #333333;
+        .btn-primary:hover {
+            background-color: #0056b3;
+            border-color: #004085;
         }
-        .btn-toggle {
-            margin-left: auto;
-            display: block;
+        .btn-secondary {
+            background-color: #6c757d;
+            border-color: #6c757d;
+        }
+        .btn-secondary:hover {
+            background-color: #5a6268;
+            border-color: #4e555b;
         }
     </style>
 </head>
 <body>
-    <div class="container my-5">
-        <div class="d-flex justify-content-between align-items-center mb-4">
-            <h1 class="text-center">Text Formatter</h1>
-            <button class="btn btn-secondary btn-toggle" id="toggleModeBtn">Toggle Dark Mode</button>
-        </div>
-        <div class="mb-3">
-            <label for="inputText" class="form-label">Enter Your Text:</label>
-            <textarea class="form-control" id="inputText" rows="5" placeholder="Enter your text here..."></textarea>
-        </div>
-        <button class="btn btn-primary w-100" id="generateBtn">Generate</button>
-        <div class="mt-4">
-            <h4 class="output-title">Output:</h4>
-            <p id="outputText" class="border"></p>
+    <div class="container text-center">
+        <h1>Text Formatter</h1>
+        <p>Choose your preferred language:</p>
+        <div class="d-flex justify-content-center">
+            <a href="english.html" class="btn btn-primary mx-2">English</a>
+            <a href="bangla.html" class="btn btn-secondary mx-2">বাংলা</a>
         </div>
     </div>
 
     <!-- Bootstrap 5 JS and Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- JavaScript -->
-    <script>
-        document.getElementById('generateBtn').addEventListener('click', function() {
-            let inputText = document.getElementById('inputText').value;
-            let formattedText = inputText.split(/\r?\n/).filter(line => line.trim() !== '').join('&nbsp;&nbsp;&nbsp;●&nbsp;&nbsp;&nbsp;');
-            document.getElementById('outputText').innerHTML = formattedText;
-        });
-
-        document.getElementById('toggleModeBtn').addEventListener('click', function() {
-            document.body.classList.toggle('dark-mode');
-        });
-    </script>
 </body>
 </html>
