--- a/english.html
+++ b/english.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="bn">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>টেক্সট ফরম্যাটার</title>
+    <title>Text Formatter</title>
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
             background-color: #f4f4f9;
             color: #333;
-            font-family: 'Noto Serif Bengali', serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             transition: background-color 0.3s ease, color 0.3s ease;
         }
         .dark-mode {
@@ -75,17 +75,17 @@
 <body>
     <div class="container">
         <div class="d-flex justify-content-between align-items-center mb-4">
-            <h1 class="text-center w-100">টেক্সট ফরম্যাটার</h1>
-            <button class="btn btn-secondary btn-toggle" id="toggleModeBtn">ডার্ক মোড চালু/বন্ধ</button>
+            <h1 class="text-center w-100">Text Formatter</h1>
+            <button class="btn btn-secondary btn-toggle" id="toggleModeBtn">Toggle Dark Mode</button>
         </div>
         <div class="mb-3">
-            <label for="inputText" class="form-label">আপনার টেক্সট লিখুন:</label>
-            <textarea class="form-control" id="inputText" rows="5" placeholder="এখানে আপনার টেক্সট লিখুন..."></textarea>
+            <label for="inputText" class="form-label">Enter Your Text:</label>
+            <textarea class="form-control" id="inputText" rows="5" placeholder="Enter your text here..."></textarea>
         </div>
-        <button class="btn btn-primary w-100 mb-3" id="generateBtn">জেনারেট করুন</button>
+        <button class="btn btn-primary w-100 mb-3" id="generateBtn">Generate</button>
         <div class="output-actions mb-2">
-            <h4 class="output-title">আউটপুট:</h4>
-            <button class="btn btn-success" id="copyBtn">ক্লিপবোর্ডে কপি করুন</button>
+            <h4 class="output-title">Output:</h4>
+            <button class="btn btn-success" id="copyBtn">Copy to Clipboard</button>
         </div>
         <p id="outputText" class="border"></p>
     </div>
@@ -106,25 +106,4 @@
 
         document.getElementById('copyBtn').addEventListener('click', function() {
             let outputText = document.getElementById('outputText').textContent;
-            navigator.clipboard.writeText(outputText).then(() => {
-                alert('আউটপুট ক্লিপবোর্ডে কপি করা হয়েছে!');
-            }).catch(err => {
-                alert('টেক্সট কপি করতে ব্যর্থ: ', err);
-            });
-        });
-
-        document.getElementById('inputText').addEventListener('input', function() {
-            spellCheck(this.value);
-        });
-
-        function spellCheck(text) {
-            // Dummy spell check implementation for demonstration
-            let misspelledWords = ["ভুল", "শব্দ"]; // Example misspelled words
-            let outputText = text.split(' ').map(word => {
-                return misspelledWords.includes(word) ? `<span style="color: red;">${word}</span>` : word;
-            }).join(' ');
-            document.getElementById('outputText').innerHTML = outputText;
-        }
-    </script>
-</body>
-</html>
+         
