--- a/english.html
+++ b/english.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>টেক্সট ফরম্যাটার</title>
+    <title>Text Formatter</title>
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
             background-color: #f4f4f9;
             color: #333;
-            font-family: 'Noto Serif Bengali', serif;
+            font-family: "Space Mono", monospace;
+            font-weight: 400;
+            font-style: normal;
             transition: background-color 0.3s ease, color 0.3s ease;
         }
         .dark-mode {
