--- a/bangla.html
+++ b/bangla.html
@@ -90,6 +90,18 @@
         <p id="outputText" class="border"></p>
     </div>
 
+    <footer class="bg-body-tertiary text-center">
+        <!-- Grid container -->
+        <div class="container p-4"></div>
+        <!-- Grid container -->
+      
+        <!-- Copyright -->
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
+          © 2024 Copyright: Zero Inc.
+        </div>
+        <!-- Copyright -->
+    </footer>
+    
     <!-- Bootstrap 5 JS and Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- JavaScript -->
